--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^4.8.2",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-material-dropdown": "^0.7.1",
     "react-navigation": "^1.0.0-beta.26"
   },
   "devDependencies": {
