--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "eslint": "^4.9.0",
     "firebase": "^4.8.2",
     "react": "16.0.0",
