--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.17.1",
     "eslint": "^4.9.0",
     "firebase": "^4.8.2",
+    "lodash": "^4.17.5",
     "react": "16.0.0",
     "react-native": "0.51.0",
     "react-native-material-dropdown": "^0.7.1",
