--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "eslint": "^4.9.0",
     "firebase": "^4.8.2",
     "lodash": "^4.17.5",
+    "npm": "^5.7.1",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-check-box": "^2.1.0",
+    "react-native-datepicker": "^1.6.0",
     "react-native-material-dropdown": "^0.7.1",
     "react-navigation": "^1.0.0-beta.26"
   },
