--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "npm": "^5.8.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-native-check-box": "^2.1.0",
     "react-native-datepicker": "^1.6.0",
+    "react-native-elements": "^0.19.1",
     "react-native-material-dropdown": "^0.7.1",
     "react-native-push-notification": "^3.0.2",
+    "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.0.0-beta.26"
   },
   "devDependencies": {
