Fixed uploading the right size avatar

--- a/ios/MyApp/Info.plist
+++ b/ios/MyApp/Info.plist
@@ -36,7 +36,7 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Accessing your photos is required for building your avatar.</string>
 	<key>UILaunchStoryboardName</key>
