--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.51.0",
     "react-native-datepicker": "^1.6.0",
     "react-native-elements": "^0.19.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.7",
     "react-native-material-dropdown": "^0.7.1",
     "react-native-push-notification": "^3.0.2",
