--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "npm": "^5.8.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-camera": "^1.1.4",
     "react-native-datepicker": "^1.6.0",
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-image-picker": "^0.26.7",
     "react-native-material-dropdown": "^0.7.1",
     "react-native-push-notification": "^3.0.2",
+    "react-native-qrcode": "^0.2.6",
+    "react-native-qrcode-scanner": "^1.0.1",
+    "react-native-qrcode-svg": "^5.1.0",
+    "react-native-svg": "^6.4.1",
     "react-native-vector-icons": "^4.6.0",
     "react-navigation": "^1.0.0-beta.26"
   },
