--- a/android/build.gradle
+++ b/android/build.gradle
@@ -24,3 +24,14 @@ allprojects {
         }
     }
 }
+
+ext {
+    googlePlayServicesVersion = "+" // default: "+"
+    firebaseVersion = "+" // default: "+"
+
+    // Other settings
+    compileSdkVersion = 26 // default: 23
+    buildToolsVersion = "26.0.2" // default: "23.0.1"
+    targetSdkVersion = 26 // default: 23
+    supportLibVersion = "26.0.2" // default: 23.1.1
+}
