Added DeviceInfo package to prevent simulator from updating groups.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,4 +14,6 @@ target 'MyApp' do
   pod 'Firebase/Messaging', '~> 5.3.0'
   pod 'Firebase/Auth', '~> 5.3.0'
   pod 'Firebase/DynamicLinks', '~> 5.3.0'
+  pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
+
 end
