--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.4.1",
     "react-native": "^0.56.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-device-info": "^0.24.3",
     "react-native-elements": "^0.19.1",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.3.8",
