--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -137,11 +137,11 @@ android {
 }
 
 dependencies {
+    compile project(':rn-fetch-blob')
     compile project(':react-native-device-info')
     compile(project(':react-native-firebase')) {
          transitive = false
     }
-    compile project(':react-native-fetch-blob')
     compile project(':react-native-image-picker')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
