--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,4 +16,6 @@ target 'MyApp' do
   pod 'Firebase/DynamicLinks', '~> 5.3.0'
   pod 'RNDeviceInfo', :path => '../node_modules/react-native-device-info'
 
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
 end
