--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react-native-datepicker": "^1.7.2",
     "react-native-device-info": "^0.24.3",
     "react-native-elements": "^0.19.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-firebase": "^4.3.8",
     "react-native-image-picker": "^0.26.10",
     "react-native-material-dropdown": "^0.7.2",
     "react-native-push-notification": "^3.1.1",
     "react-native-vector-icons": "^4.6.0",
-    "react-navigation": "^1.5.12",
-    "rn-fetch-blob": "^0.10.13"
+    "react-navigation": "^1.5.12"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
