linked fetch blob library

--- a/ios/MyApp/Info.plist
+++ b/ios/MyApp/Info.plist
@@ -38,7 +38,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs to acces your camera.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>$(PRODUCT_NAME) needs to acces your microphone for video recording.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
